# eavesly

./: .dockerignore  .env.example  .gitignore  DOCKER_TEST_RESULTS.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json  promptlayer_analysis.json  pyproject.toml  requirements.txt  test_api_locally.py  test_database_integration.py  test_docker_deployment.sh  test_e2e.py  test_minimal_server.py  test_payloads.json  test_promptlayer_integration.py  test_server_minimal.py  test_simple_api.py
app/: config.py  main.py
app/api/: middleware.py  routes.py
app/models/: __init__.py  requests.py  responses.py  schemas.py
app/services/: database.py  llm_client.py  orchestrator.py  prompt_layer.py
app/utils/: logger.py
logs/: .gitkeep
project-docs/: database_schema.md  prd.md  project_intructions.md  promptLayer_prompts.md  python_implementation_guide.md
project-docs/old/: old_prompt.md
scripts/: README.md  docker-compose.yml  test_docker_deployment.sh
scripts/integrations/: pipedream_transform.js
tests/: test_api_endpoints.py  test_api_integration.py  test_llm_client.py  test_orchestrator.py  test_prompt_layer.py
tests/fixtures/: __init__.py  call_samples.py
